<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#1c2029"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/main_container_theme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button_ac"
                style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@drawable/button_theme"
                android:text="@string/ac"
                android:textColor="#21e7c5"
                android:textSize="20sp" />

            <Button
                android:id="@+id/button_percentage"
                style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:textSize="25sp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@drawable/button_theme"
                android:text="@string/mod"
                android:textColor="#21e7c5" />

            <Button
                android:id="@+id/button3"
                style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@drawable/button_theme"
                android:text="@string/rais_to"
                android:textSize="30sp"
                android:textColor="#21e7c5" />

            <Button
                android:id="@+id/button_div"
                style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@drawable/button_theme"
                android:text="@string/div"
                android:textColor="#e26363"
                android:textSize="30sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button_seven"
                style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@drawable/button_theme"
                android:text="@string/seven"
                android:textColor="#ffffff"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button_eight"
                style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@drawable/button_theme"
                android:text="@string/eight"
                android:textColor="#ffffff"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button_nine"
                style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@drawable/button_theme"
                android:text="@string/nine"
                android:textColor="#ffffff"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button_mul"
                style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@drawable/button_theme"
                android:text="@string/mul"
                android:textColor="#e26363"
                android:textSize="30sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button_four"
                style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@drawable/button_theme"
                android:text="@string/four"
                android:textColor="#ffffff"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button_five"
                style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@drawable/button_theme"
                android:text="@string/five"
                android:textColor="#ffffff"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button_six"
                style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@drawable/button_theme"
                android:text="@string/six"
                android:textColor="#ffffff"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button_sub"
                style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@drawable/button_theme"
                android:text="@string/sub"
                android:textColor="#e26363"
                android:textSize="30sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button_one"
                style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@drawable/button_theme"
                android:text="@string/one"
                android:textColor="#ffffff"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button_two"
                style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@drawable/button_theme"
                android:text="@string/two"
                android:textColor="#ffffff"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button_three"
                style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@drawable/button_theme"
                android:text="@string/three"
                android:textColor="#ffffff"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button_add"
                style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@drawable/button_theme"
                android:text="@string/add"
                android:textColor="#e26363"
                android:textSize="30sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button18"
                style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="20dp"
                android:layout_weight="1"
                android:background="@drawable/button_theme"
                android:text="@string/point"
                android:textColor="#ffffff"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button_zero"
                style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_margin="8dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="20dp"
                android:layout_weight="1"
                android:background="@drawable/button_theme"
                android:text="@string/zero"
                android:textColor="#ffffff"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button_back"
                style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_margin="8dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="20dp"
                android:layout_weight="1"
                android:background="@drawable/button_theme"
                android:drawableTop="@drawable/back_icon"
                android:drawablePadding="-52dp"
                android:paddingTop="20dp"
                android:textColor="#ffffff"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button_equal"
                style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_margin="8dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="20dp"
                android:layout_weight="1"
                android:background="@drawable/button_theme"
                android:text="@string/equals"
                android:textColor="#e26363"
                android:textSize="30sp" />
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/expression"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:paddingRight="20dp"
        android:text=""
        android:textColor="#AAAAAA"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        android:autoSizeTextType="uniform"
        />

    <TextView
        android:id="@+id/answer"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_marginTop="20dp"
        android:paddingRight="20dp"
        android:text=""
        android:textColor="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/expression"
        android:autoSizeTextType="uniform"/>


</androidx.constraintlayout.widget.ConstraintLayout>